--- a/typography-geometry.cabal
+++ b/typography-geometry.cabal
@@ -1,17 +1,17 @@
 Name:		typography-geometry
-Version: 	1.0.0
+Version: 	1.0.0.1
 Synopsis:	Drawings for printed text documents
 Description: 	Drawings for printed text documents
 Category:	Typography
-Maintainer:	Pierre-Etienne Meunier <pierreetienne.meunier@gmail.com>
+Author:         Pierre-Etienne Meunier <pierreetienne.meunier@gmail.com>
+Maintainer:	Jean-Philippe Bernardy <jeanphilippe.bernardy@gmail.com>
 License:	GPL
 License-file:	LICENSE
 Build-Type:	Simple
 Cabal-Version:	>=1.6
-source-repository this
-        type: darcs
-        location: http://www.lama.univ-savoie.fr/~meunier/darcs/typography-geometry
-        tag: 1.0
+source-repository head
+        type: git
+        location: https://github.com/jyp/typography-geometry
 Library
         Build-Depends:	base<5, vector,polynomials-bernstein,containers,parallel
         Exposed-modules: Graphics.Typography.Geometry, Graphics.Typography.Geometry.Bezier,
